Chat box no longer autofocuses on small displays.

--- a/css/fflproject.css
+++ b/css/fflproject.css
@@ -143,7 +143,11 @@ td select{margin-bottom:0px !important;}
 
 #chat-modal{min-width:320px; padding:0px;}
 
-#chat-message{}
+
+
+#chat-message{font-size: 1em; }
+
+
 #chat-button-small{height:40px;}
 
 .jBox-chat .jBox-content{padding-top:0px !important; padding-left:5px !important; padding-right:5px !important;}
